--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,19 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: 100 Words Review
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Keeping it simple and spoiler free
 
 # Your name to show in the footer
-author: Some Person
+author: Rupesh
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+#   About Me: "aboutme"
+  Author's home: "https://rs9899.github.io/"
 
 # --- Logo --- #
 
@@ -38,11 +35,13 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  rss: true
+  email: "rupesh95903@gmail.com"
+  facebook: rupesh2906
+  github: rs9899
+#   twitter: RUPESH5903
+  linkedin: rupesh-r-0418a399
+#   stackoverflow: "7891596/rupesh"
+  instagram: rupesh__99
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
@@ -68,7 +67,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+# url-pretty: "MyWebsite.com"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
@@ -103,7 +102,7 @@ footer-link-col: "#404040"
 #gtag: ""
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-147852058-1"
 
 # Google Tag Manager ID
 #gtm: ""
@@ -122,7 +121,7 @@ footer-link-col: "#404040"
 #disqus: ""
 
 # To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
-#fb_comment_id: ""
+fb_comment_id: "212790369252105"
 
 # To use Utterances comments: (0) uncomment the following section, (1) fill in
 # "repository" (make sure the repository is public), (2) Enable Issues in your repository,
@@ -164,7 +163,7 @@ date_format: "%B %-d, %Y"
 # --- You don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "Asia/Kolkata"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
