--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ author: Rupesh
 navbar-links:
 #   About Me: "aboutme" 
   Index: "indexing" 
-  Author's home: "https://rs9899.github.io/"
+  Author's home: "https://rupesh.info/"
+  About: "https://100wordsreview.com/2020-05-24-intro/"
 
 # --- Logo --- #
 
