--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,7 @@ footer-link-col: "#404040"
 #navbar-img: "/assets/img/bgimage.png"
 #footer-img: "/assets/img/bgimage.png"
 #page-img: "/assets/img/bgimage.png"
+share-img: "/assets/img/100words.png"
 
 # --- Web Statistics Section --- #
 
